--- a/style.css
+++ b/style.css
@@ -45,8 +45,10 @@
 .form-control{
     border-radius: 60px;
 }
-.form-control::placeholder{
-    margin-left: 20px;
+
+.form-control::-webkit-input-placeholder{
+    padding-left: 20px;
+   
 }
 .btn-outline-success:hover{
     background-color: #ff7070 !important;
@@ -55,7 +57,7 @@
 /* Banner CSS */
 
 #banner{
-    background-color: #FFEAE3;
+    background-color:#FFEAE3 ;
     padding: 10%;
     color: #121481;
 }
@@ -70,13 +72,10 @@
 /* col css */
 
 #maincont{
-    padding: 80px 0;
+     padding-top: 80px;
 }
 
 .maincont{
     color: #121481;
-}
-
-.copyright{
-    padding-bottom: 0% !important;
+    
 }
